[package]
name = "stryke-clickhouse"
version = "0.3.0"
edition = "2021"
description = "ClickHouse cdylib for the stryke `clickhouse` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-clickhouse"
homepage = "https://menketechnologies.github.io/stryke-clickhouse/"
publish = false

[lib]
name = "stryke_clickhouse"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# ClickHouse's HTTP interface (default port 8123) over ureq: pure-Rust, sync,
# rustls-backed — no tokio, no OpenSSL. Same durable transport model as
# stryke-search; the connection Agent (keep-alive pool) is cached per endpoint.
ureq = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
